--- a/app/views/games/display_letters.html.erb
+++ b/app/views/games/display_letters.html.erb
@@ -4,8 +4,9 @@
     <h1 class='mx-2 px-2 bg-primary text-white rounded shadow text-center' style="width:45px"><%=letter%></h1>
   <% end %>
 </div>
-<form action="/score" method="POST" data-turbo="false">
-  <input type="text" name="word" placeholder="longest work you can find">
+<form action="/score" method="post" data-turbo="false">
+  <input type="text" name="word" placeholder="longest word you can find">
+  <input type="hidden" name="letters" value = "<%= @letters.join %>">
   <input type="submit" value="Play" >
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 </form>
