--- a/app/views/games/display_letters.html.erb
+++ b/app/views/games/display_letters.html.erb
@@ -1,12 +1,12 @@
 <h1 class="my-3">New Game</h1>
-<div class="d-flex">
+<div class="d-flex justify-content-center">
   <% @letters.each do |letter| %>
     <h1 class='mx-2 px-2 bg-primary text-white rounded shadow text-center' style="width:45px"><%=letter%></h1>
   <% end %>
 </div>
-<form action="/score" method="post" data-turbo="false">
-  <input type="text" name="word" placeholder="longest word you can find">
+<form action="/score" method="post" data-turbo="false" class="d-flex my-4 justify-space-between">
+  <input class="form-control" type="text" name="word" placeholder="longest word you can find">
   <input type="hidden" name="letters" value = "<%= @letters.join %>">
-  <input type="submit" value="Play" >
+  <input class="btn btn-primary" type="submit" value="Play" >
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 </form>
